@@ -322,6 +322,7 @@ src_install() {
 	cp "${FILESDIR}/domainkey.conf" "${D}/usr/share/${PN}"
 	cp "${FILESDIR}/froxlor.cron" "${D}/usr/share/${PN}"
 	cp "${FILESDIR}/php-fcgi-starter" "${D}/usr/share/${PN}"
+	cp "${FILESDIR}/php.ini" "${D}/usr/share/${PN}"
 }
 
 pkg_postinst() {
@@ -766,9 +767,11 @@ ssl.ca-file = \"${ROOT}etc/ssl/server/${servername}.pem\"
 			chmod 0750 "${ROOT}${FROXLOR_DOCROOT}/froxlor/php-fcgi-script/tmp"
 			touch "${ROOT}${FROXLOR_DOCROOT}/froxlor/php-fcgi-script/php-fcgi-starter"
 			echo "${ROOT}/usr/share/${PN}/php-fcgi-starter" >> "${ROOT}${FROXLOR_DOCROOT}/froxlor/php-fcgi-script/php-fcgi-starter"
-			chown froxlor:froxlor -R "${ROOT}${FROXLOR_DOCROOT}/froxlor/php-fcgi-script" || die "Unable to fix owner for php-fcgi-script folder"
 			chmod 0750 "${ROOT}${FROXLOR_DOCROOT}/froxlor/php-fcgi-script/php-fcgi-starter"
 			chattr +i "${ROOT}${FROXLOR_DOCROOT}/froxlor/php-fcgi-script/php-fcgi-starter"
+			touch "${ROOT}${FROXLOR_DOCROOT}/froxlor/php-fcgi-script/php.ini"
+			echo "${ROOT}/usr/share/${PN}/php.ini" >> "${ROOT}${FROXLOR_DOCROOT}/froxlor/php-fcgi-script/php.ini"
+			chown froxlor:froxlor -R "${ROOT}${FROXLOR_DOCROOT}/froxlor/php-fcgi-script" || die "Unable to fix owner for php-fcgi-script folder"
 		fi
 
 		if useq ssl ; then
@@ -940,8 +943,8 @@ ssl.ca-file = \"${ROOT}etc/ssl/server/${servername}.pem\"
 	fi
 
 	einfo "Configuring Gentoo-Froxlor cronjob ..."
-	exeinto "${ROOT}/etc/cron.d"
-	newexe "${ROOT}/usr/share/${PN}/froxlor.cron" froxlor
+	insinto "${ROOT}/etc/cron.d"
+	newins "${ROOT}/usr/share/${PN}/froxlor.cron" froxlor
 
 	if ! useq dovecot ; then
 		einfo "Configuring Courier-IMAP ..."
@@ -1110,7 +1113,7 @@ ssl.ca-file = \"${ROOT}etc/ssl/server/${servername}.pem\"
 	fi
 
 	if useq domainkey && useq bind ; then
-		echo "${ROOT}/usr/share/${PN}/domainkey.conf" >> "${ROOT}/etc/postfix/main.cf"
+		cat "${ROOT}/usr/share/${PN}/domainkey.conf" >> "${ROOT}/etc/postfix/main.cf"
 	fi
 
 	# Automatical Bind configuration, if Bind is installed
